--- a/app/src/main/res/layout/fragment_teacher_about_us.xml
+++ b/app/src/main/res/layout/fragment_teacher_about_us.xml
@@ -3,8 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#E8ECEF"
-    android:layout_marginBottom="70dp">
+    android:layout_marginBottom="70dp"
+
+    android:background="#E8ECEF">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -41,6 +42,7 @@
 
         <!-- Team Members -->
         <!-- Repeat this CardView block for each member -->
+
         <!-- Abd -->
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
@@ -80,16 +82,31 @@
                     android:textColor="#000000"
                     android:layout_marginTop="8dp" />
 
-                <TextView
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Work Done: All teacher activities"
-                    android:textSize="14sp"
-                    android:layout_marginTop="4dp" />
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="4dp"
+                        android:text="Role:"
+                        android:textColor="#1565C0"
+                        android:textSize="14sp"
+                        android:textStyle="bold"
+                        android:visibility="visible" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:text=" Teacher Module Lead"
+
+                        android:layout_height="wrap_content"
+                        android:textSize="14sp"
+                        android:layout_marginBottom="4dp"/>
+                </LinearLayout>
             </LinearLayout>
         </androidx.cardview.widget.CardView>
 
-        <!-- Anas -->
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -128,12 +145,33 @@
                     android:textColor="#000000"
                     android:layout_marginTop="8dp" />
 
-                <TextView
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Work Done: All student activities"
-                    android:textSize="14sp"
-                    android:layout_marginTop="4dp" />
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="4dp"
+                        android:text="Role:"
+                        android:textColor="#1565C0"
+                        android:textSize="14sp"
+                        android:textStyle="bold"
+                        android:visibility="visible" />
+                    <TextView
+                        android:id="@+id/txtEventDateTime"
+                        android:layout_width="wrap_content"
+                        android:text=" Student Module Lead"
+
+                        android:layout_height="wrap_content"
+                        android:textSize="14sp"
+                        android:layout_marginBottom="4dp"/>
+                </LinearLayout>
+
+
+
+
             </LinearLayout>
         </androidx.cardview.widget.CardView>
 
@@ -176,12 +214,28 @@
                     android:textColor="#000000"
                     android:layout_marginTop="8dp" />
 
-                <TextView
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Work Done: All registrar activities"
-                    android:textSize="14sp"
-                    android:layout_marginTop="4dp" />
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="4dp"
+                        android:text="Role:"
+                        android:textColor="#1565C0"
+                        android:textSize="14sp"
+                        android:textStyle="bold"
+                        android:visibility="visible" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:text=" Registrar Module Lead"
+
+                        android:layout_height="wrap_content"
+                        android:textSize="14sp"
+                        android:layout_marginBottom="4dp"/>
+                </LinearLayout>
             </LinearLayout>
         </androidx.cardview.widget.CardView>
     </LinearLayout>
