--- a/app/src/main/res/layout/fragment_teacher_schedule.xml
+++ b/app/src/main/res/layout/fragment_teacher_schedule.xml
@@ -25,10 +25,10 @@
     <Spinner
         android:id="@+id/spnDay"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:layout_marginTop="16dp"
         android:padding="12dp"
-        android:background="@drawable/spinner_background"
+        android:background="@drawable/search_background"
         app:layout_constraintTop_toBottomOf="@id/tvTitle"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
