--- a/app/src/main/res/layout/fragment_teacher_sent_assignment.xml
+++ b/app/src/main/res/layout/fragment_teacher_sent_assignment.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#EAF0F5"
-    android:padding="16dp">
+    android:padding="16dp"
+    android:layout_marginBottom="20dp">
 
     <!-- Title -->
 
@@ -212,16 +213,18 @@
         android:id="@+id/sendButton"
         android:layout_width="152dp"
         android:layout_height="54dp"
+        android:layout_marginTop="10dp"
         android:layout_marginBottom="50dp"
         android:backgroundTint="#990100"
-        android:layout_marginTop="3dp"
         android:fontFamily="@font/alatsi"
         android:text="Send"
         android:textColor="#FFFFFF"
         android:textSize="17sp"
-        app:layout_constraintTop_toBottomOf="@id/cardContainer"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/cardContainer"
+        app:layout_constraintVertical_bias="0.068" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
