--- a/app/src/main/res/layout/fragment_teacher_take_attendance.xml
+++ b/app/src/main/res/layout/fragment_teacher_take_attendance.xml
@@ -26,11 +26,10 @@
     <Spinner
         android:id="@+id/spnTeacherTakeAttendance"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
-        android:background="@android:drawable/btn_dropdown"
-        app:layout_constraintTop_toBottomOf="@id/tvTitle"
+        android:background="@drawable/search_background"        app:layout_constraintTop_toBottomOf="@id/tvTitle"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
