--- a/app/src/main/res/layout/fragment_teacher_view_grade.xml
+++ b/app/src/main/res/layout/fragment_teacher_view_grade.xml
@@ -35,9 +35,9 @@
     <Spinner
         android:id="@+id/spnClass"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:layout_marginTop="4dp"
-        android:background="@android:drawable/btn_dropdown"
+        android:background="@drawable/search_background"
         app:layout_constraintTop_toBottomOf="@id/lblClass"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -58,9 +58,9 @@
     <Spinner
         android:id="@+id/spnSubject"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:layout_marginTop="4dp"
-        android:background="@android:drawable/btn_dropdown"
+        android:background="@drawable/search_background"
         app:layout_constraintTop_toBottomOf="@id/lblSubject"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -188,6 +188,7 @@
                 <TextView
                     android:text="Total"
                     android:textStyle="bold"
+                    android:layout_marginRight="7dp"
                     android:textColor="#FFFFFF"
                     android:gravity="center" />
             </TableRow>
