--- a/app/src/main/res/layout/fragment_teacher_view_submissions.xml
+++ b/app/src/main/res/layout/fragment_teacher_view_submissions.xml
@@ -28,9 +28,9 @@
     <Spinner
         android:id="@+id/spnClass"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:layout_marginTop="24dp"
-        android:background="@drawable/spinner_background"
+        android:background="@drawable/search_background"
         android:padding="8dp"
         app:layout_constraintTop_toBottomOf="@id/tvTitle"
         app:layout_constraintStart_toStartOf="parent"
