--- a/app/src/main/res/menu/nav_drawer_teacher_menu.xml
+++ b/app/src/main/res/menu/nav_drawer_teacher_menu.xml
@@ -43,7 +43,8 @@
             <item
                 android:id="@+id/teacher_nav_sittings"
                 android:icon="@drawable/setting"
-                android:title="Settings" />
+                android:title="Settings"
+                android:checkable="true" />
             <item
                 android:id="@+id/teacher_nav_logout"
                 android:icon="@drawable/logout"
