--- a/app/src/main/res/layout/list_item_student_schedule.xml
+++ b/app/src/main/res/layout/list_item_student_schedule.xml
@@ -69,7 +69,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="left"
 
-                android:text="08:00 - 09:30"
+                android:text="08:00 "
                 android:textColor="#0277BD"
                 android:textSize="16sp"
                 android:textStyle="bold" />
