--- a/app/src/main/res/menu/nav_drawer_student_menu.xml
+++ b/app/src/main/res/menu/nav_drawer_student_menu.xml
@@ -39,6 +39,7 @@
             <item
                 android:id="@+id/nav_sittings"
                 android:icon="@drawable/setting"
+                android:checkable="true"
                 android:title="Settings" />
             <item
                 android:id="@+id/nav_logout"
