--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -2,41 +2,25 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#ebeff2">
 
-    <!-- Centered App Logo -->
+
     <ImageView
-        android:id="@+id/splashLogo"
-        android:layout_width="180dp"
-        android:layout_height="180dp"
-        android:src="@drawable/logo4"
-        android:contentDescription="App Logo"
-        android:layout_marginTop="250dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/appName"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:id="@+id/splashGif"
+        android:layout_width="348dp"
+        android:layout_height="326dp"
+        android:layout_marginTop="200dp"
         android:layout_marginBottom="12dp"
-        android:scaleType="fitCenter" />
-
-    <!-- App Name -->
-    <TextView
-        android:id="@+id/appName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="SchoolHub"
-        android:textSize="28sp"
-        android:textStyle="bold"
-        android:textColor="#B92F2F"
-        android:fontFamily="sans-serif-medium"
-        app:layout_constraintTop_toBottomOf="@id/splashLogo"
-        app:layout_constraintStart_toStartOf="parent"
+        android:contentDescription="Splash GIF"
+        android:scaleType="fitCenter"
+        app:layout_constraintBottom_toTopOf="@+id/tagline"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="8dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <!-- Optional Tagline -->
     <TextView
         android:id="@+id/tagline"
         android:layout_width="wrap_content"
@@ -46,11 +30,11 @@
         android:text="SchoolHub is your gateway to success."
         android:textColor="#B92F2F"
         android:textSize="16sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/appName" />
+        app:layout_constraintTop_toBottomOf="@id/splashGif" />
 
-    <!-- Optional ProgressBar -->
     <ProgressBar
         android:id="@+id/progressBar"
         android:layout_width="40dp"
