--- a/app/src/main/res/layout/fragment_registrar_home.xml
+++ b/app/src/main/res/layout/fragment_registrar_home.xml
@@ -66,7 +66,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Today is "
+                    android:text=""
                     android:textColor="#d9534f"
                     android:textSize="14sp"
                     android:fontFamily="@font/inknut_antiqua_light"
